# OOP-CourseWork

./: CMakeLists.txt  README.md  StudyTask.cpp  StudyTask.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  UrgentWorkTask.cpp  UrgentWorkTask.h  WorkTask.cpp  WorkTask.h  main.cpp
